# -

./: .gitignore  README.md  main.py  processing.py  pyproject.toml
src/: decorators.py  external_api.py  finance_reader.py  generators.py  main1.py  masks.py  processing.py  transaction_stats.py  transaction_utils.py  utils.py  widget.py
tests/: test_generators.py  test_masks.py  test_processing.py  test_transaction_stats.py  test_transaction_utils.py  test_utils.py  test_widget.py
transactions/: transactions_excel.xlsx
