[project]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"
pytest = "^8.4.1"


[tool.poetry.dependencies]
python-dotenv = "^1.1.1"
requests = "^2.32.4"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      /.git
  )/
 )
 '''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

